# profila

./: .dir-locals.el  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
scripts_for_tests/: example.py  numpy_imports.py  parallel.py  simple.py  test.ipynb
src/profila/: __init__.py  __main__.py  _gdb.py  _ipython.py  _render.py  _stats.py
tests/: test_end_to_end.py  test_profila.py  test_render.py  test_stats.py
tests/__snapshots__/: test_render.ambr
